--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ setuptools~=65.5.0
 six~=1.16.0
 APScheduler~=3.10.4
 betterlogging~=1.0.0
+peewee~=3.17.3
+gspread~=6.1.0
+oauth2client~=4.1.3
+pandas~=2.2.2
