--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiogram~=3.5.0
-pip~=23.2.1
+pip~=23.3
 attrs~=23.2.0
 pytz~=2024.1
 idna~=3.7
@@ -12,7 +12,7 @@ yarl~=1.9.4
 aiosignal~=1.3.1
 frozenlist~=1.4.1
 tzlocal~=5.2
-setuptools~=65.5.0
+setuptools~=65.5.1
 six~=1.16.0
 APScheduler~=3.10.4
 betterlogging~=1.0.0
@@ -20,3 +20,4 @@ peewee~=3.17.3
 gspread~=6.1.0
 oauth2client~=4.1.3
 pandas~=2.2.2
+psycopg2
